--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0 flex items-center">
-                        <img src="C:\SPARK LANDING PAGE\images\SPARK.png" alt="Logo SPARK - Solusi Parkir Pintar" class="h-16">
+                        <img src="images/SPARK.png" alt="Logo SPARK - Solusi Parkir Pintar" class="h-16">
                     </div>
                 </div>
                 <div class="hidden sm:ml-6 sm:flex sm:items-center sm:space-x-8">
@@ -169,13 +169,13 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="C:\SPARK LANDING PAGE\images\PEMESANAN DAN RESERVASI.png" alt="Tampilan pemesanan parkir di aplikasi SPARK dengan formulir dan peta" class="rounded-lg shadow-lg">
+                    <img src="images/PEMESANAN DAN RESERVASI.png" alt="Tampilan pemesanan parkir di aplikasi SPARK dengan formulir dan peta" class="rounded-lg shadow-lg">
                 </div>
             </div>
 
             <div class="grid md:grid-cols-2 gap-12 items-center mb-16">
                 <div class="order-last md:order-first">
-                    <img src="C:\SPARK LANDING PAGE\images\NAVIGASI .png" alt="Tampilan navigasi real-time di aplikasi SPARK dengan petunjuk arah" class="rounded-lg shadow-lg">
+                    <img src="images/NAVIGASI .png" alt="Tampilan navigasi real-time di aplikasi SPARK dengan petunjuk arah" class="rounded-lg shadow-lg">
                 </div>
                 <div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Navigasi & Panduan Real-Time</h3>
@@ -221,7 +221,7 @@
                     </ul>
                 </div>
                 <div>
-                    <img src="C:\SPARK LANDING PAGE\images\DASHBOARD.png" alt="Dashboard analisis pendapatan SPARK dengan grafik dan statistik" class="rounded-lg shadow-lg">
+                    <img src="images/DASHBOARD.png" alt="Dashboard analisis pendapatan SPARK dengan grafik dan statistik" class="rounded-lg shadow-lg">
                 </div>
             </div>
         </div>
