--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </p>
         <div class="relative overflow-hidden pb-[56.25%] h-0 mb-6 rounded-lg shadow-xl">
             <iframe class="absolute top-0 left-0 w-full h-full" 
-                src="https://youtu.be/qcZQt3Sojdc?si=bHQojCyFg755cuUx" 
+                src="https://www.youtube.com/embed/qcZQt3Sojdc" 
                 title="Video Demo SPARK" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -375,7 +375,7 @@
                             </div>
                             <div class="ml-3">
                                 <p class="text-gray-300">Email</p>
-                                <a href="mailto:info@spark.com" class="text-indigo-400 hover:text-indigo-300">info@spark.com</a>
+                                <a href="mailto:infosparkidn@gmail.com" class="text-indigo-400 hover:text-indigo-300">infosparkidn@gmail.com</a>
                             </div>
                         </div>
                         
